--- a/force-app/main/default/classes/LeadHandlerTest.cls
+++ b/force-app/main/default/classes/LeadHandlerTest.cls
@@ -15,6 +15,7 @@ public class LeadHandlerTest {
         led.Company = 'Salesforce';
         led.Industry = 'Agriculture';
         //led.Status = 'Open';
+         led.Our_Offerings__c='Advisory Services';
         insert led; 
          led.Sales_Lead__c=cp.Id;        
         update led;  
